; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_sync_sema.c_semaphore_timedwait_trap.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_sync_sema.c_semaphore_timedwait_trap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.semaphore_timedwait_trap_args = type { i32, i32, i32 }

@thread_syscall_return = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @semaphore_timedwait_trap(%struct.semaphore_timedwait_trap_args* %0) #0 {
  %2 = alloca %struct.semaphore_timedwait_trap_args*, align 8
  store %struct.semaphore_timedwait_trap_args* %0, %struct.semaphore_timedwait_trap_args** %2, align 8
  %3 = load %struct.semaphore_timedwait_trap_args*, %struct.semaphore_timedwait_trap_args** %2, align 8
  %4 = getelementptr inbounds %struct.semaphore_timedwait_trap_args, %struct.semaphore_timedwait_trap_args* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.semaphore_timedwait_trap_args*, %struct.semaphore_timedwait_trap_args** %2, align 8
  %7 = getelementptr inbounds %struct.semaphore_timedwait_trap_args, %struct.semaphore_timedwait_trap_args* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.semaphore_timedwait_trap_args*, %struct.semaphore_timedwait_trap_args** %2, align 8
  %10 = getelementptr inbounds %struct.semaphore_timedwait_trap_args, %struct.semaphore_timedwait_trap_args* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @thread_syscall_return, align 4
  %13 = call i32 @semaphore_timedwait_trap_internal(i32 %5, i32 %8, i32 %11, i32 %12)
  ret i32 %13
}

declare dso_local i32 @semaphore_timedwait_trap_internal(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
